--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,10 +1,1 @@
-
-<!-- pdf.text "Name: #{@student.first_name} #{student.last_name}"
-pdf.text 
-pdf.text 
-pdf.text 
-pdf.text 
-pdf.text 
-pdf.text  -->
-
-test...
+<%= @student.first_name %>
